tests/baselines/reference/declarationEmitBundleWithAmbientReferences.errors.txt
src/datastore_result.ts(1,1): error TS18056: Declaration file contains synthesized file reference directives: '"../lib/lib.d.ts"'


==== lib/lib.d.ts (0 errors) ====
    declare module "lib/result" {
        export type Result<E extends Error, T> = (E & Failure<E>) | (T & Success<T>);
        export interface Failure<E extends Error> { }
        export interface Success<T> { }
    }
    
==== src/datastore_result.ts (1 errors) ====
    import { Result } from "lib/result";
    ~~~~~~
!!! error TS18056: Declaration file contains synthesized file reference directives: '"../lib/lib.d.ts"'
    
    export type T<T> = Result<Error, T>;
    
==== src/conditional_directive_field.ts (0 errors) ====
    import * as DatastoreResult from "src/datastore_result";
    
    export const build = (): DatastoreResult.T<string> => {
    	return null;
    };
    